[ADDED] an html version for the license

--- a/license.html
+++ b/license.html
@@ -8,7 +8,7 @@
         <p>This license applies for the code of this game, however, the licensing for the assets may differ depending on the asset.</p>
         <p>The links for the assets can be found in the html folder, the temp/html</p>
         <p>The fonts belong to SEGA (NiseSegaSonic.ttf) and Microsoft (Helvetica-Bold.ttf) and their licensing is applied.</p>
-        <p>This game was my first time creating a game and was written in the space of two weeks.</p>
+        <p>This game was my first time creating a game and was written in the space of about two weeks.</p>
         <br>
         <p>Crediting for the assets used can be found in the ./runner -c option of the program as well as in the show_credits.c</p>
         <br>
